update controllers - swagger
