# MyRecordsAPI/src/routes/label.route.ts
@@ -1,8 +1,14 @@
 import Router from 'express';
-import { getLabels, getLabelById } from '../controllers/label.controller';
+import {
+  getLabels,
+  getLabelById,
+  createLabel,
+} from '../controllers/label.controller';
+import { isAuthenticated } from '../middleware/auth';
 
 const router = Router();
 
 router.get('/api/v1/labels', getLabels);
 router.get('/api/v1/labels/:id', getLabelById);
+router.post('/api/v1/labels/create', isAuthenticated, createLabel);
 export default router;
