# MyRecordsAPI/src/routes/user.route.ts
@@ -7,8 +7,8 @@ import {
 
 const router = Router();
 
-router.get('/api/v1/user/:id', getUserById);
-router.post('/api/v1/user/login', loginUser);
-router.post('/api/v1/user/signup', signUpUser);
+router.get('/api/v1/users/:id', getUserById);
+router.post('/api/v1/users/login', loginUser);
+router.post('/api/v1/users/signup', signUpUser);
 
 export default router;
